apps/podinfo/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo-dev
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
