apps/podinfo/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: podinfo-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo-dev.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
